[package]
name = "jsonless"
version = "1.0.0"
authors = ["Dmytro Lazarenko<dlazarenko.ua@gmail.com>"]
description = "It compresses and obfuscates JSON."
repository = "https://github.com/7everen/jsonless-rs"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
log = "0.4"
serde_json = "1.0.114"

[dev-dependencies]
